# scrapy-feedexporter-google-drive

./: README.md  pyproject.toml  readme.md  requirements.txt  setup.py
scrapy_google_drive/: __init__.py
src/scrapy_gdrive_exporter/: gdrive_exporter.py  gdrive_utils.py
tests/: test_gdrive_utils.py
